--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   appwrite: ^12.0.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
