--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   google_nav_bar: ^5.0.6
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
