--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  appwrite: ^12.0.1
+  appwrite: ^12.0.4
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   google_nav_bar: ^5.0.6
   smooth_page_indicator: ^1.1.0
+  flutter_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_test:
