--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_riverpod: ^2.5.1
   flutter_native_splash: ^2.4.0
   flutter_spinkit: ^5.2.1
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
