--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   mobile_scanner: ^5.1.1
   qr_scanner_overlay: ^0.0.2
+  pretty_qr_code: ^3.3.0
 
 dev_dependencies:
   flutter_test:
