--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   qr_scanner_overlay: ^0.0.2
   pretty_qr_code: ^3.3.0
   flutter_dotenv: ^5.1.0
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
