--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   pretty_qr_code: ^3.3.0
   flutter_dotenv: ^5.1.0
   get: ^4.6.6
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
